Section Final finalized, responvive and working

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,3 +24,5 @@ flutter:
     - assets/hero-bg.jpg
     - assets/capa_livro.jpg
     - assets/milagre_de_lanciano.jpg
+    - assets/santo_tomas_de_aquino.jpg
+    - assets/santo-tomas-aquino.webp
