--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   font_awesome_flutter: ^10.10.0
   url_launcher: ^6.3.2
+  firebase_core: ^4.2.0
+  firebase_auth: ^6.1.1
+  firebase_storage: ^13.0.3
+  cloud_firestore: ^6.0.3
 
 dev_dependencies:
   flutter_test:
