--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_auth: ^6.1.1
   firebase_storage: ^13.0.3
   cloud_firestore: ^6.0.3
+  dio: ^5.9.0
 
 dev_dependencies:
   flutter_test:
